# ai-talk-app

./: README.md  docker-compose.yml
backend/: pyproject.toml
backend/.docker/: Dockerfile
backend/apps/account/: email.py  models.py
backend/apps/account/migrations/: 0001_initial.py
backend/apps/account/templates/account/: activation.html  confirmation.html  password_changed_confirmation.html  password_reset.html  username_changed_confirmation.html  username_reset.html
backend/apps/ai_talk/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/ai_talk/migrations/: 0001_initial.py
backend/apps/ai_talk/template/: oder_sheet.txt
backend/apps/custom_authtoken/: apps.py  urls.py  views.py
backend/apps/mail/templates/account/: confirmation.html  username_changed_confirmation.html  username_reset.html
backend/apps/utility/: models.py  utils.py  views.py
backend/deploy/: uwsgi.ini
backend/server/: settings.py  urls.py
backend/server/settings/: base.py  dev.py  permissions.py  prod.py
frontend/: .env example  nuxt.config.ts  package-lock.json  package.json
frontend/.docker/: Dockerfile
frontend/src/assets/styles/: style.scss
frontend/src/components/blocks/: Footer.vue  Header.vue
frontend/src/components/common/: CommonSnackBar.vue
frontend/src/composables/: authStore.ts  urlStore.ts
frontend/src/layouts/: default.vue
frontend/src/middleware/: auth-middleware.global.ts
frontend/src/pages/: index.vue
frontend/src/plugins/: vuetify.ts
frontend/src/utils/: api-base-url.ts  validation.ts
(+63 files in other folders)
