[tool.poetry]
name = ""
version = "0.1.0"
description = ""
authors = ["taku820801 <takuchanpower@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
django = ">=4.2.3"
djangorestframework = "^3.14.0"
django-cors-headers = "^4.3.1"
mysqlclient = "^2.2.4"
django-environ = "^0.11.2"
django-rest-swagger = "^2.2.0"
django-debug-toolbar = "^4.3.0"
whitenoise = "^6.6.0"
drf-spectacular = "^0.27.1"
django-filter = "^24.2"
djoser = "^2.2.2"
environ = "^1.0"
openai = "^1.58.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
